--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "sequelize": "^6.34.0"
   },
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   }
 }
